form page ui done

--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <title>Getting user Input</title>
 </head>
 <body>
-<h1>Enter data to predicr disease</h1>
+<h1>Enter data to predict disease</h1>
 <form action="shortenurl">
     <label for="name">Full name</label>
     <input type="text" name="name" value="" required>
